Fixed thumbnal z-index for when no checkbox is there
In file lists with no selection checkbox, the CSS selector is different.
The thumbnail also needs position:absolute and a z-index to be displayed
above the row's grey highlight.

--- a/apps/files/css/files.css
+++ b/apps/files/css/files.css
@@ -258,6 +258,8 @@ table td.filename .thumbnail {
 	margin-top: 9px;
 	cursor: pointer;
 	float: left;
+	position: absolute;
+	z-index: 4;
 }
 table td.filename input.filename {
 	width: 70%;
